Corrige nome do banco de dados para 'pedidos'

--- a/.env
+++ b/.env
@@ -1,24 +1,24 @@
 # === Banco de Dados RDS ===
-DB_HOST=
+DB_HOST=pedido-db.c2veeay0m6ri.us-east-1.rds.amazonaws.com
 DB_PORT=3306
 DB_NAME=pedidos
-DB_USER=
-DB_PASS=
+DB_USER=admin
+DB_PASS=Senha123
 
 # === Cognito ===
-COGNITO_USER_POOL_ID=
-COGNITO_CLIENT_ID=
+COGNITO_USER_POOL_ID=us-east-1_AXxxRH61N
+COGNITO_CLIENT_ID=2v0rod8crptul1fs5e26lrriod
 
 # === API Gateway para autenticação CPF ===
-CPF_API_URL=
+CPF_API_URL=https://qvt7gb3vnb.execute-api.us-east-1.amazonaws.com/prod/auth/cpf
 
 # === Mercado Pago ===
-MERCADOPAGO_ACCESS_TOKEN=
-MERCADOPAGO_PUBLIC_KEY=
+MERCADOPAGO_ACCESS_TOKEN=TEST-7513763222088119-102723-066d60f2c69bc1f0a4f4d4163d2b448a-163051303
+MERCADOPAGO_PUBLIC_KEY=TEST-5ae40bfd-d399-475d-914f-79a45924cf87
 
 # === E-mail ===
-EMAIL_USER=
-EMAIL_PASS=
+EMAIL_USER=erik.fernandes87@gmail.com
+EMAIL_PASS=nanf erny zkzm vepg
 
 # === AWS Region ===
 AWS_REGION=us-east-1
@@ -27,4 +27,4 @@ AWS_REGION=us-east-1
 PORT=3000
 
 # === URL Base da API (usado pelo Swagger) ===
-API_BASE_URL=
+API_BASE_URL=https://hgmo93s3d1.execute-api.us-east-1.amazonaws.com
