--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,11 @@ DB_USER=admin
 DB_PASS=Senha123
 
 # === Cognito ===
-COGNITO_USER_POOL_ID=us-east-1_AXxxRH61N
-COGNITO_CLIENT_ID=2v0rod8crptul1fs5e26lrriod
+COGNITO_USER_POOL_ID=us-east-1_zylfxYn5B
+COGNITO_CLIENT_ID=7bl85qafg9npgv8a4un1pno4vv
 
 # === API Gateway para autenticação CPF ===
-CPF_API_URL=https://qvt7gb3vnb.execute-api.us-east-1.amazonaws.com/prod/auth/cpf
+CPF_API_URL=https://8pxpztd61j.execute-api.us-east-1.amazonaws.com
 
 # === Mercado Pago ===
 MERCADOPAGO_ACCESS_TOKEN=TEST-7513763222088119-102723-066d60f2c69bc1f0a4f4d4163d2b448a-163051303
@@ -27,4 +27,4 @@ AWS_REGION=us-east-1
 PORT=3000
 
 # === URL Base da API (usado pelo Swagger) ===
-API_BASE_URL=https://hgmo93s3d1.execute-api.us-east-1.amazonaws.com
+API_BASE_URL=https://8pxpztd61j.execute-api.us-east-1.amazonaws.com
