--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,31 +2,29 @@ name: Build, Push and Deploy Pedido Service
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     env:
-      AWS_REGION: us-east-1
       ECR_REGISTRY: 124355673305.dkr.ecr.us-east-1.amazonaws.com
       ECR_REPOSITORY: pedido-service
-      ECR_IMAGE: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
       CLUSTER_NAME: fastfood-cluster
       SERVICE_NAME: pedido-service
-      TASK_EXEC_ROLE: ecsTaskExecutionRole
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Configure AWS Credentials
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-access-key-id:     ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
+          aws-region:            us-east-1
+      
       - name: Ensure ECS Task Execution Role Exists
         run: |
           if ! aws iam get-role --role-name $TASK_EXEC_ROLE >/dev/null 2>&1; then
@@ -49,14 +47,28 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build and Push Docker image
+      - name: Ensure ECR repository exists
         run: |
-          docker build -t $ECR_IMAGE .
-          docker push $ECR_IMAGE
+          if ! aws ecr describe-repositories --repository-names "${ECR_REPOSITORY}" >/dev/null 2>&1; then
+            aws ecr create-repository --repository-name "${ECR_REPOSITORY}"
+          fi
+
+      - name: Build and Push Docker image to ECR
+        run: |
+          # monta a tag completa
+          IMAGE_TAG="${ECR_REGISTRY}/${ECR_REPOSITORY}:latest"
+          echo "Building $IMAGE_TAG"
+          docker build -t "$IMAGE_TAG" .
+          docker push "$IMAGE_TAG"
+     
+        env:
+          AWS_REGION: us-east-1
 
       - name: Force new ECS deployment
         run: |
           aws ecs update-service \
-            --cluster $CLUSTER_NAME \
-            --service $SERVICE_NAME \
+            --cluster "${CLUSTER_NAME}" \
+            --service "${SERVICE_NAME}" \
             --force-new-deployment
+        env:
+          AWS_REGION: us-east-1
