--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,11 +8,14 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     env:
+      AWS_REGION: us-east-1
       ECR_REGISTRY: 124355673305.dkr.ecr.us-east-1.amazonaws.com
       ECR_REPOSITORY: pedido-service
       CLUSTER_NAME: fastfood-cluster
       SERVICE_NAME: pedido-service
+      TASK_EXEC_ROLE: ecsTaskExecutionRole
 
     steps:
       - name: Checkout repository
@@ -23,25 +26,32 @@ jobs:
         with:
           aws-access-key-id:     ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region:            us-east-1
-      
+          aws-region:            ${{ env.AWS_REGION }}
+
       - name: Ensure ECS Task Execution Role Exists
         run: |
-          if ! aws iam get-role --role-name $TASK_EXEC_ROLE >/dev/null 2>&1; then
+          if ! aws iam get-role --role-name "${TASK_EXEC_ROLE}" >/dev/null 2>&1; then
+            echo "🔨 Creating role ${TASK_EXEC_ROLE}"
             aws iam create-role \
-              --role-name $TASK_EXEC_ROLE \
+              --role-name "${TASK_EXEC_ROLE}" \
               --assume-role-policy-document '{
                 "Version":"2012-10-17",
-                "Statement":[{"Effect":"Allow","Principal":{"Service":"ecs-tasks.amazonaws.com"},"Action":"sts:AssumeRole"}]
+                "Statement":[
+                  {
+                    "Effect":"Allow",
+                    "Principal":{"Service":"ecs-tasks.amazonaws.com"},
+                    "Action":"sts:AssumeRole"
+                  }
+                ]
               }'
             aws iam attach-role-policy \
-              --role-name $TASK_EXEC_ROLE \
+              --role-name "${TASK_EXEC_ROLE}" \
               --policy-arn arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
             aws iam attach-role-policy \
-              --role-name $TASK_EXEC_ROLE \
+              --role-name "${TASK_EXEC_ROLE}" \
               --policy-arn arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
           else
-            echo "Role $TASK_EXEC_ROLE already exists"
+            echo "✅ Role ${TASK_EXEC_ROLE} already exists"
           fi
 
       - name: Login to Amazon ECR
@@ -50,19 +60,18 @@ jobs:
       - name: Ensure ECR repository exists
         run: |
           if ! aws ecr describe-repositories --repository-names "${ECR_REPOSITORY}" >/dev/null 2>&1; then
+            echo "🔨 Creating ECR repository ${ECR_REPOSITORY}"
             aws ecr create-repository --repository-name "${ECR_REPOSITORY}"
+          else
+            echo "✅ ECR repository ${ECR_REPOSITORY} already exists"
           fi
 
       - name: Build and Push Docker image to ECR
         run: |
-          # monta a tag completa
           IMAGE_TAG="${ECR_REGISTRY}/${ECR_REPOSITORY}:latest"
-          echo "Building $IMAGE_TAG"
+          echo "🔨 Building $IMAGE_TAG"
           docker build -t "$IMAGE_TAG" .
           docker push "$IMAGE_TAG"
-     
-        env:
-          AWS_REGION: us-east-1
 
       - name: Force new ECS deployment
         run: |
@@ -70,5 +79,3 @@ jobs:
             --cluster "${CLUSTER_NAME}" \
             --service "${SERVICE_NAME}" \
             --force-new-deployment
-        env:
-          AWS_REGION: us-east-1
