--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,26 @@
-# === Banco de Dados RDS (Pedido) ===
-DB_HOST=pedido-db.c2veeay0m6ri.us-east-1.rds.amazonaws.com
+# Banco
+DB_HOST=mysql
 DB_PORT=3306
 DB_NAME=pedidos
-DB_USER=admin
-DB_PASS=Senha123
+DB_USER=pedidos_user
+DB_PASS=pedidos_pass
 
-# === Cognito ===
-COGNITO_USER_POOL_ID=us-east-1_wfo9kNEb7
-COGNITO_CLIENT_ID=7snqejp95a4l89efvl8tdr06dn
+# Swagger / API
+API_BASE_URL=http://localhost:3000
 
-# === API Gateway para CPF ===
-CPF_API_URL=https://jvxwmc62aa.execute-api.us-east-1.amazonaws.com/auth/cpf
-
-# === Mercado Pago ===
 MERCADOPAGO_ACCESS_TOKEN=TEST-7513763222088119-102723-066d60f2c69bc1f0a4f4d4163d2b448a-163051303
 MERCADOPAGO_PUBLIC_KEY=TEST-5ae40bfd-d399-475d-914f-79a45924cf87
-
-# === E-mail ===
 EMAIL_USER=erik.fernandes87@gmail.com
 EMAIL_PASS="nanf erny zkzm vepg"
 
-# === AWS Region e porta ===
+AWS_ACCESS_KEY_ID=AKIARZ5BM7TMYV5H4HPM
+AWS_SECRET_ACCESS_KEY=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
 AWS_REGION=us-east-1
-PORT=3000
+COGNITO_USER_POOL_ID="us-east-1_mOXhcpgGn"
+COGNITO_CLIENT_ID="3hfn7ecolkgbnn66ks21lde0kl"
 
-# === URL Base da API (Swagger) ===
-API_BASE_URL=https://jvxwmc62aa.execute-api.us-east-1.amazonaws.com
+CPF_API_URL=http://localhost:3000/auth/cpf
+
+NODE_ENV=local
+
+CLIENTE_SERVICE_URL=http://cliente:4000
