--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "MIT",
     "dependencies": {
         "aws-jwt-verify": "^5.0.0",
+        "aws-sdk": "^2.1360.0",
         "body-parser": "^1.20.2",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
@@ -20,7 +21,8 @@
         "nodemailer": "^6.9.13",
         "sequelize": "^6.37.2",
         "swagger-jsdoc": "^6.2.8",
-        "swagger-ui-express": "^5.0.1"
+        "swagger-ui-express": "^5.0.1",
+        "axios": "^1.4.0"
     },
     "devDependencies": {
         "jest": "^29.7.0",
