--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "dependencies": {
         "aws-jwt-verify": "^5.0.0",
         "aws-sdk": "^2.1360.0",
+        "axios": "^1.4.0",
         "body-parser": "^1.20.2",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "http-proxy-middleware": "^3.0.5",
         "jsonwebtoken": "^9.0.0",
         "mysql2": "^3.5.2",
         "nodemailer": "^6.9.13",
         "sequelize": "^6.37.2",
         "swagger-jsdoc": "^6.2.8",
-        "swagger-ui-express": "^5.0.1",
-        "axios": "^1.4.0"
+        "swagger-ui-express": "^5.0.1"
     },
     "devDependencies": {
         "jest": "^29.7.0",
