adding sonarcloud scan

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,20 @@
-DB_HOST=pedido-db.c2veeay0m6ri.us-east-1.rds.amazonaws.com
-DB_PORT=3306
-DB_NAME=pedidos
-DB_USER=admin
-DB_PASS=Senha123
+DB_HOST=pedido-db.xxxxxxx.xx-xxxx-n.rds.amazonaws.com
+DB_PORT=NNNN
+DB_NAME=xxxxxx
+DB_USER=xxxxx
+DB_PASS=xxxxxxx
 
-API_BASE_URL=http://localhost:3000
-CLIENTE_SERVICE_URL=http://cliente:4000
+API_BASE_URL=http://xxxxxxxxxxxx:3000
+CLIENTE_SERVICE_URL=http://xxxxxxxxxxxx:4000
 
-MERCADOPAGO_ACCESS_TOKEN=TEST-7513763222088119-102723-066d60f2c69bc1f0a4f4d4163d2b448a-163051303
-MERCADOPAGO_PUBLIC_KEY=TEST-5ae40bfd-d399-475d-914f-79a45924cf87
-EMAIL_USER=erik.fernandes87@gmail.com
-EMAIL_PASS=nanf erny zkzm vepg
+MERCADOPAGO_ACCESS_TOKEN=TEST-....
+MERCADOPAGO_PUBLIC_KEY=TEST-....
 
-AWS_ACCESS_KEY_ID=AKIARZ5BM7TMYV5H4HPM
-AWS_SECRET_ACCESS_KEY=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
-AWS_REGION=us-east-1
-COGNITO_USER_POOL_ID=us-east-1_4hF0kAFyR
-COGNITO_CLIENT_ID=4cljtbjp7g3ltfsp5e86056cmi
+AWS_ACCESS_KEY_ID=xxxx
+AWS_SECRET_ACCESS_KEY=xxxx
+AWS_REGION=xx-xxxx-n
+COGNITO_USER_POOL_ID=xx-xxxx-n_XXXXXXX
+COGNITO_CLIENT_ID=zxzxzxxxxxxxxxxxxxxxxxxxx
 
 NODE_ENV=local
 
