build and push to ecr

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ DB_HOST=pedido-db.xxxxxxx.xx-xxxx-n.rds.amazonaws.com
 DB_PORT=NNNN
 DB_NAME=xxxxxx
 DB_USER=xxxxx
-DB_PASS=xxxxxxx
+DB_PASSWORD=xxxxxxx
 
 API_BASE_URL=http://xxxxxxxxxxxx:3000
 CLIENTE_SERVICE_URL=http://xxxxxxxxxxxx:4000
