--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DB_HOST=pedido-db.xxxxxxx.xx-xxxx-n.rds.amazonaws.com
+DB_HOST=xxxxx
 DB_PORT=NNNN
 DB_NAME=xxxxxx
 DB_USER=xxxxx
@@ -7,12 +7,6 @@ DB_PASSWORD=xxxxxxx
 API_BASE_URL=http://xxxxxxxxxxxx:3000
 CLIENTE_SERVICE_URL=http://xxxxxxxxxxxx:4000
 
-MERCADOPAGO_ACCESS_TOKEN=TEST-....
-MERCADOPAGO_PUBLIC_KEY=TEST-....
-
-AWS_ACCESS_KEY_ID=xxxx
-AWS_SECRET_ACCESS_KEY=xxxx
-AWS_REGION=xx-xxxx-n
 COGNITO_USER_POOL_ID=xx-xxxx-n_XXXXXXX
 COGNITO_CLIENT_ID=zxzxzxxxxxxxxxxxxxxxxxxxx
 
